# rohomieo

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  setup.sh
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml
.github/workflows/: ci.yml
crates/host/: Cargo.toml
crates/host/src/: capture.rs  config.rs  encode.rs  input.rs  jpeg_frame.rs  main.rs  motion.rs  platform.rs  signaling_client.rs  webrtc_peer.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/signaling/: Cargo.toml
crates/signaling/src/: api.rs  audit.rs  main.rs  metrics.rs  session.rs  ws.rs
docs/: ARCHITECTURE.md  GETTING_STARTED.md  ROADMAP.md  USAGE.md  WHATS_NEXT.md
infra/: host.toml.example
infra/docker/: Dockerfile.signaling  README.md
infra/grafana/: rohomieo-dashboard.json
infra/systemd/: rohomieo-signaling.service.in
infra/wireguard/: README.md  laptop.conf.example  phone.conf.example  server.conf.example
infra/wireguard/wsl-bridge/: README.md  server.conf.template
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart  proto.dart  webrtc_viewer.dart
proto/: messages.md  schema.json
scripts/: build-windows-host.sh  dev.sh  gen-dev-cert.sh  gen-device-key.sh  health-check.sh  mingw-link-wrapper.sh  setup-linux.sh  setup-macos.sh  setup-windows.ps1  setup-wsl.sh  start-linux.sh  start-macos.sh  start-windows-host.ps1  start-wsl-bridge.sh  start-wsl.sh  sync-windows-run.sh  uninstall.sh  wake-on-lan.sh  wireguard-gen-keys.sh  wireguard-wsl-bridge.sh
scripts/lib/: bundle-windows-runtime.sh  mingw-toolchain.sh  setup-common.sh  setup-start.sh
scripts/patches/: scrap-build.rs
scripts/windows/: RUN-ROHOMIEO.cmd  build-host.ps1  build-msvc.ps1  deploy-run-dir.ps1  enable-phone-access.cmd  enable-phone-access.ps1  open-lan-bridge.ps1  run-bridge.ps1  start-bridge.ps1  start-host.ps1  start-signaling.ps1  wsl-bridge-portproxy.ps1  wsl-enable-mirrored-network.ps1
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: gen-icons.py
web/src/: App.css  App.tsx  proto.ts  storage.ts  webrtc.ts
