[package]
name = "rohomieo-host"
version.workspace = true
edition.workspace = true
description = "Rohomieo host agent — screen capture, WebRTC, input injection"

[[bin]]
name = "rohomieo-host"
path = "src/main.rs"

[dependencies]
rohomieo-proto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
scrap = "0.5"
enigo = "0.2"
webrtc = "0.17"
interceptor = "0.12"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
url = "2"
bytes = "1"
openh264 = "0.6"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
toml = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["shm"] }
